--- a/docs/10_domains/20_electrochemistry.mdx
+++ b/docs/10_domains/20_electrochemistry.mdx
@@ -46,7 +46,7 @@ General purpose ELNs can be found with the keyword "Physical chemistry":
 
 For specific domains, such as "electrosynthesis" the Chemotion ELN might be an appropriate choice.
 
-Tools presented for [other domains](docs/domain_guide/) might also be applicable.
+Tools presented for [other domains](/docs/domain_guide/) might also be applicable.
 
 ## Publishing Data
 
