--- a/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
+++ b/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
@@ -1,5 +1,4 @@
 ---
-
 title: "For Academic Publishers"
 slug: "/publishing_standards_publishers"
 ---
@@ -12,14 +11,13 @@ This guide is based on our standards for data publishing for academic publishers
 
 ![a flowchart for data publishing for academic publishers](/img/data_pub/academic_publishers.png)
 
-
 ## 1. Recommend Trusted, Chemistry-Friendly Repositories
 
-To assist authors in selecting **well-established and community-specific [repositories](docs/repositories)** for their research data, it is important for journals to recommend trusted [chemistry-friendly repositories](docs/choose_repository). This information should be included within the author guidelines or data policies to assist researchers during the publication process.
+To assist authors in selecting **well-established and community-specific [repositories](/docs/repositories)** for their research data, it is important for journals to recommend trusted [chemistry-friendly repositories](/docs/choose_repository). This information should be included within the author guidelines or data policies to assist researchers during the publication process.
 
 ## 2. Include Data Availability Statements
 
-Journals should encourage authors to provide a [**data availability statement**](/docs/data_availability_statement) in their manuscripts. To facilitate this, [templates](/docs/data_availability_statement/#templates-for-data-availability-statements) should be made available in the journal's author guidelines or similar sections. These templates help authors correctly submit underlying data with their manuscript while effectively communicating how to find and access the data by including DOIs or other [PIDs](/docs/pid), thereby enabling adherence to [FAIR principles]((/docs/fair/)) (e.g., [A1](/docs/fair#a1-metadata-are-retrievable-by-their-identifier-using-a-standardized-communications-protocol), [I3](/docs/fair#i3-metadata-include-qualified-references-to-other-metadata)).
+Journals should encourage authors to provide a [**data availability statement**](/docs/data_availability_statement) in their manuscripts. To facilitate this, [templates](/docs/data_availability_statement/#templates-for-data-availability-statements) should be made available in the journal's author guidelines or similar sections. These templates help authors correctly submit underlying data with their manuscript while effectively communicating how to find and access the data by including DOIs or other [PIDs](/docs/pid), thereby enabling adherence to [FAIR principles](<(/docs/fair/)>) (e.g., [A1](/docs/fair#a1-metadata-are-retrievable-by-their-identifier-using-a-standardized-communications-protocol), [I3](/docs/fair#i3-metadata-include-qualified-references-to-other-metadata)).
 
 ## 3. Integrate Data Availability Statements into Submission Systems
 
@@ -32,6 +30,7 @@ Journals should enhance [Crossref](https://www.crossref.org/) DOI metadata by li
 In agreement with [Crossref's documentation on linking datasets](https://www.crossref.org/documentation/schema-library/markup-guide-metadata-segments/relationships/), use the relationship type `isSupplementedBy`.
 
 ### XML Example:
+
 ```xml
 <rel:program name="relations">
 	<rel:related_item>
@@ -60,6 +59,7 @@ Journals should encourage inclusion of research data during peer review processe
 As mentioned [above](#5-encourage-pre-submission-of-datasets), to streamline automated workflows linking datasets with published articles through respective PIDs, journals must require that datasets marked _under review_ be published before associated articles are released. Authors should receive **clear communication** regarding this process upon acceptance of their manuscripts.
 
 ### Communication Tips:
+
 Alongside acceptance notifications, journals should provide authors with corresponding article DOI so they can include this metadata prior to dataset publication.
 
 ## 8. Utilize Scholix.org Framework
@@ -75,13 +75,8 @@ Journals should leverage [**Scholix**](https://doi.org/10.1045/january2017-burto
 5. _Journal author guidelines should explicitly encourage pre-submission of datasets._
 6. _Journal author guidelines should explicitly encourage research data to be included in the review process._
 7. _Journal author guidelines should require that datasets with status under review to be published prior to the publication of the associated article._
-7. _Journals and publishers should use Scholix.org._
+8. _Journals and publishers should use Scholix.org._
 
 ---
 
 Main authors: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661), [ORCID: 0000-0002-6243-2840](https://orcid.org/0000-0002-6243-2840)
-
-
-
-
-
