--- a/docs/20_role/50_core_facility_manager.mdx
+++ b/docs/20_role/50_core_facility_manager.mdx
@@ -72,10 +72,6 @@ The challenge of digesting those metadata according to [FAIR guiding principles]
 
 ## Sources
 
-1. <span id="dfg_code" />
-   Deutsche Forschungsgemeinschaft (DFG), *Guidelines for Safeguarding Good Research
-   Practice. Code of Conduct*, September 2019, [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3923602.svg)](https://doi.org/10.5281/zenodo.3923602)
+1. Deutsche Forschungsgemeinschaft (DFG), _Guidelines for Safeguarding Good Research Practice. Code of Conduct_, September 2019, [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3923602.svg)](https://doi.org/10.5281/zenodo.3923602) {#dfg_code}
 
-2. <span id="sync" />
-   See [Microsoft documentation](https://docs.microsoft.com/en-us/windows-server/administration/windows-commands/robocopy)
-   for `robocopy` or [manpage](https://linux.die.net/man/1/rsync) for `rsync`.
+2. See [Microsoft documentation](https://docs.microsoft.com/en-us/windows-server/administration/windows-commands/robocopy) for `robocopy` or [manpage](https://linux.die.net/man/1/rsync) for `rsync`. {#sync}
